--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+APScheduler==3.6.3
+backcall==0.2.0
 beautifulsoup4==4.8.2
 boto3==1.13.1
 botocore==1.16.1
@@ -12,13 +14,21 @@ decorator==4.4.2
 docutils==0.15.2
 future==0.18.2
 idna==2.9
+ipython-genutils==0.2.0
+jedi==0.17.0
 jmespath==0.9.5
 lxml==4.5.1
 numpy==1.18.2
 pandas==1.0.3
+parso==0.7.0
+pexpect==4.8.0
+pickleshare==0.7.5
+prompt-toolkit==3.0.5
+ptyprocess==0.6.0
 pyaes==1.6.1
 pyasn1==0.4.8
 pycparser==2.20
+Pygments==2.6.1
 PySocks==1.7.1
 pyTelegramBotAPI==3.6.7
 python-dateutil==2.8.1
@@ -29,8 +39,12 @@ rsa==4.0
 s3transfer==0.3.3
 six==1.14.0
 soupsieve==2.0
+telegram==0.0.1
 Telethon==1.11.3
 tornado==6.0.4
+traitlets==4.3.3
 typing-extensions==3.7.4.2
+tzlocal==2.1
 urllib3==1.25.9
+wcwidth==0.2.4
 youtube-dl==2020.6.6
