--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+APScheduler==3.6.3
 beautifulsoup4==4.9.1
 boto3==1.14.7
 botocore==1.17.7
@@ -23,5 +24,6 @@ s3transfer==0.3.3
 six==1.15.0
 soupsieve==2.0.1
 tornado==6.0.4
+tzlocal==2.1
 urllib3==1.25.9
 youtube-dl==2020.6.16.1
